--- a/fish-world/src/app/fish/home/home.component.html
+++ b/fish-world/src/app/fish/home/home.component.html
@@ -70,7 +70,7 @@
                 time of the year. Colours range all across the rainbow, from blues and greens to pinks and reds.</p> -->
 
         </aside>
-        <p *ngIf="fishPost?.length === 0" class="no-post">There are no animals in need!</p>
+        <p *ngIf="fishPost?.length === 0" class="no-post">There are no fish post yet!</p>
     </section>
 
 
