update error page -add the animation

--- a/fish-world/src/app/shared/error-page/error-page.component.html
+++ b/fish-world/src/app/shared/error-page/error-page.component.html
@@ -1,5 +1,30 @@
 <main>
-    <div>
+    <div class="fish">
+        <div class="fish-body">
+          <div class="eye">
+            <div class="pupil"></div>
+          </div>
+        </div>
+        <div class="fin"></div>
+        <div class="fin fin-bottom"></div>
+      </div>
+      
+      <div class="bubbles bubble-1"></div>
+      <div class="bubbles bubble-5"></div>
+      <div class="bubbles bubble-2"></div>
+      <div class="bubbles bubble-6"></div>
+      <div class="bubbles bubble-3"></div>
+      <div class="bubbles bubble-7"></div>
+      <div class="bubbles bubble-4"></div>
+      <div class="bubbles bubble-8"></div>
+      <div class="content-not-found">
+        <h2>The page you are looking for was not found!
+        </h2>
+        </div>
+      <p>Go to
+        <a class="nav-link" routerLink="/home">Home ...</a>
+    </p>
+    <!-- <div>
         <div class="img-not-found">
             <img src="assets/img/yelloFish.png" alt="">
         </div>
@@ -11,5 +36,5 @@
             <a class="nav-link" routerLink="/home">Home ...</a>
         </p>
        
-    </div>
+    </div> -->
 </main>
