--- a/fish-world/src/app/user/profile/profil.component.html
+++ b/fish-world/src/app/user/profile/profil.component.html
@@ -17,7 +17,7 @@
                 <img src="{{fish.image}}">
                 <p>Name: {{fish.name}}</p>
                 <p>Type: {{fish.type}} </p>
-                <a class="details-btn" routerLink="/details/">Details</a>
+                <a class="details-btn" routerLink="/details/{{fish._id}}">Details</a>
             </article>
         </div>
     </section>
