update validation in fish components

--- a/fish-world/src/app/fish/add-fish/add-fish.component.html
+++ b/fish-world/src/app/fish/add-fish/add-fish.component.html
@@ -11,6 +11,14 @@
             placeholder="name"
             formControlName="name"
             />
+            <ng-container *ngIf="form.get('name')?.touched">
+                <p class="error" style="color: red;" *ngIf="form.get('name')?.errors?.['required']">
+                  Name is required!
+                </p>
+                <p class="error" style="color: red;" *ngIf="form.get('name')?.errors?.['minlength']">
+                  Name should be longer than 2 characters!
+                </p>
+              </ng-container>
 
             <label>Image</label>
             <input id="img-url"
@@ -20,12 +28,26 @@
              placeholder="Image" 
              formControlName="image"/>
             
+             <ng-container *ngIf="form.get('image')?.touched">
+                <p class="error" style="color: red;" *ngIf="form.get('image')?.errors?.['required']">
+                  Image is required!
+                </p>
+              </ng-container> 
+              
             <label>Fish Type:</label>
             <input  class="field_class" 
             name="type" 
             placeholder="type"
             formControlName="type"
             />
+            <ng-container *ngIf="form.get('type')?.touched">
+                <p class="error" style="color: red;" *ngIf="form.get('type')?.errors?.['required']">
+                  Type is required!
+                </p>
+                <p class="error" style="color: red;" *ngIf="form.get('type')?.errors?.['minlength']">
+                  Type should be longer than 3 characters!
+                </p>
+              </ng-container>
 
             <label>Description:</label>
             <textarea  class="field_class" 
@@ -33,6 +55,16 @@
             placeholder="description"
             formControlName="description"
             ></textarea>
+
+            <ng-container *ngIf="form.get('description')?.touched">
+                <p class="error" style="color: red;" *ngIf="form.get('description')?.errors?.['required']">
+                  Description is required!
+                </p>
+                <p class="error" style="color: red;" *ngIf="form.get('description')?.errors?.['minlength']">
+                  Description should be longer than 20 characters!
+                </p>
+              </ng-container>
+              
             <button class="submit_class" type="submit">Create</button>
 
         </div>
