--- a/fish-world/src/app/fish/edit-page/edit-page.component.html
+++ b/fish-world/src/app/fish/edit-page/edit-page.component.html
@@ -12,6 +12,15 @@
             formControlName="name"
             />
 
+            <ng-container *ngIf="form.get('name')?.touched">
+                <p class="error" style="color: red;" *ngIf="form.get('name')?.errors?.['required']">
+                  Name is required!
+                </p>
+                <p class="error" style="color: red;" *ngIf="form.get('name')?.errors?.['minlength']">
+                  Name should be longer than 2 characters!
+                </p>
+              </ng-container>
+
             <label>Image</label>
             <input id="img-url"
              class="field_class" 
@@ -20,6 +29,12 @@
              [placeholder]="detailsFish.image"
              formControlName="image"/>
             
+             <ng-container *ngIf="form.get('image')?.touched">
+                <p class="error" style="color: red;" *ngIf="form.get('image')?.errors?.['required']">
+                  Image is required!
+                </p>
+              </ng-container>
+
             <label>Fish Type:</label>
             <input  class="field_class" 
             name="type" 
@@ -27,12 +42,31 @@
             formControlName="type"
             />
 
+            <ng-container *ngIf="form.get('type')?.touched">
+                <p class="error" style="color: red;" *ngIf="form.get('type')?.errors?.['required']">
+                  Type is required!
+                </p>
+                <p class="error" style="color: red;" *ngIf="form.get('type')?.errors?.['minlength']">
+                  Type should be longer than 3 characters!
+                </p>
+              </ng-container>
+
             <label>Description:</label>
             <textarea  class="field_class" 
             name="description" 
             placeholder="description"
             formControlName="description"
             ></textarea>
+
+            <ng-container *ngIf="form.get('description')?.touched">
+                <p class="error" style="color: red;" *ngIf="form.get('description')?.errors?.['required']">
+                  Description is required!
+                </p>
+                <p class="error" style="color: red;" *ngIf="form.get('description')?.errors?.['minlength']">
+                  Description should be longer than 20 characters!
+                </p>
+              </ng-container>
+              
             <button class="submit_class"  type="submit">Edit</button>
 
         </div>
