the buttons will be disable if there is invalid data

--- a/fish-world/src/app/fish/add-fish/add-fish.component.html
+++ b/fish-world/src/app/fish/add-fish/add-fish.component.html
@@ -65,7 +65,7 @@
                 </p>
               </ng-container>
               
-            <button class="submit_class" type="submit">Create</button>
+            <button class="submit_class" [disabled]="form.invalid" type="submit">Create</button>
 
         </div>
 
