--- a/fish-world/src/app/fish/edit-page/edit-page.component.html
+++ b/fish-world/src/app/fish/edit-page/edit-page.component.html
@@ -67,7 +67,7 @@
                 </p>
               </ng-container>
               
-            <button class="submit_class"  type="submit">Edit</button>
+            <button class="submit_class" [disabled]="form.invalid"  type="submit">Edit</button>
 
         </div>
 
