--- a/fish-world/src/app/user/profile/profil.component.css
+++ b/fish-world/src/app/user/profile/profil.component.css
@@ -1,17 +1,16 @@
 .profil-detail {
     height: 80%;
     width: 100%;
-    
     display: inline-block;
 }
 
 .post-details {
-    display:inline-block;
-    width: auto;
-    height: auto;
+    display:block ;
+    align-items: center;
+    justify-content: center;
     border-radius: 30px;
-    margin-bottom: 50px;
-    padding-top:2px;
+    margin-left: 50px;
+   
 
 
 }
@@ -22,8 +21,9 @@
     justify-content: center;
     margin-top: 20px
 }
+
 .post-info {
-    display:inline-block;
+    display: inline-block;
     margin-left: 10px;
     margin-right: 30px;
     padding-top: 8%;
@@ -52,7 +52,7 @@
     margin-bottom: 10px;
     margin-left: 1%;
     background-color: white;
-    border-radius: 30px;  
+    border-radius: 30px;
 
 }
 
@@ -64,6 +64,7 @@
     height: 150px;
     margin: 10px;
 }
+
 .post-item img {
     border: 2px solid rgba(169, 152, 198, 0.781);
     border-radius: 50%;
@@ -89,23 +90,37 @@
     text-decoration: none;
 
 }
-.post-details h2 {
-    font-style: oblique;
+
+h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 30px;
     color: rgb(5, 16, 78);
-    text-align: center;
     font-size: 30px;
-    
+    margin-bottom: 5px;
 }
 
+.rating {
+    display: inline-flex;
+}
 
- .profile-item p {
+.rating img {
+    padding: auto;
+    margin-left: 10px;
+    margin-top: 0px;
+    height: 20px;
+    width: 20px;
+}
+
+.profile-item p {
     margin-top: 40px;
     text-align: left;
     font-weight: bold;
     color: aliceblue;
 
 }
+
 .post-item p {
     text-align: justify;
     font-weight: bold;
@@ -115,14 +130,14 @@
 }
 
 .no-post {
-    position:static;
-     background-color: #59452e86;
-     color: white;
-     font-style: italic;
-     font-weight: bold;
-     font-size: 30px;
-     padding: 50px;
-     text-align: center;
-     border-radius: 20px;
-     margin-bottom: 15%;
-   }
+    position: static;
+    background-color: #59452e86;
+    color: white;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 30px;
+    padding: 50px;
+    text-align: center;
+    border-radius: 20px;
+    margin-bottom: 15%;
+}
