--- a/fish-world/src/app/user/profile/profil.component.html
+++ b/fish-world/src/app/user/profile/profil.component.html
@@ -5,13 +5,14 @@
             <img src="{{profilImage()}}">
             <p>User: {{userdata.email}} </p>
             <p>Total Created Posts: {{userdata.createPost}} </p>  
-           
+            <p class="rating">Rating: {{getRatingCount()}} <img src="../../../assets/star.png" alt="star"></p>
         </article>
     </div>
     </section>
+    <h2>My Posts</h2>
     <p *ngIf="ifHasPosts()" class="no-post">You haven't created a post yet..!</p>
     <section class="post-details">
-        <h2>My Posts</h2>
+      
         <div *ngFor="let fish of fishPost" class="post-info">
             <article class="post-item">
                 <img src="{{fish.image}}">
